fix(components/JSONSchemaRenderer): align padding with current forms

--- a/packages/components/src/JSONSchemaRenderer/JSONSchemaRenderer.scss
+++ b/packages/components/src/JSONSchemaRenderer/JSONSchemaRenderer.scss
@@ -4,7 +4,7 @@
 	margin-left: $padding-large;
 
 	div {
-		margin-bottom: $padding-larger;
+		margin-bottom: $padding-normal;
 
 		dt {
 			font-weight: 400;
